--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"VfyJS is a sophisticated JavaScript library crafted to fortify projects. Its lightweight design offers a comprehensive solution for seamless value validation, ensuring data integrity and empowering developers with an advanced platform to effortlessly address diverse validation tasks in their projects.\"",
   "main": "index.js",
   "scripts": {
-    "test": "\"\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/m-mdy-m/VfyJS/issues"
   },
-  "homepage": "https://github.com/m-mdy-m/VfyJS#readme"
+  "homepage": "https://github.com/m-mdy-m/VfyJS#readme",
+  "dependencies": {
+    "jest": "^29.7.0"
+  }
 }
