--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"VfyJS is a sophisticated JavaScript library crafted to fortify projects. Its lightweight design offers a comprehensive solution for seamless value validation, ensuring data integrity and empowering developers with an advanced platform to effortlessly address diverse validation tasks in their projects.\"",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/m-mdy-m/VfyJS#readme",
   "dependencies": {
-    "jest": "^29.7.0"
+    "chai": "^5.0.0",
+    "jest": "^29.7.0",
+    "mocha": "^10.2.0"
   }
 }
