--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
-@m--mdy--m:registry=https://npm.pkg.github.com/m--mdy--m
+// .npmrc
+@m__mdy__m:registry=https://npm.pkg.github.com/m-mdy-m
+//npm.pkg.github.com/:_authToken=SHA256:jLXuqMmjh5fHRVdNFPB5iT/hvvnRYgfi5KH6L+5m6E4=
+
