--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -36,4 +36,13 @@ jobs:
     - name: Print the GITHUB_TOKEN
       run: echo ${{ secrets.GITHUB_TOKEN }}
       env:
-        GITHUB_TOKEN : ${{github.token}}
+        GITHUB_TOKEN: ${{ github.token }}
+    
+    - name: Use GITHUB_TOKEN to create a GitHub issue
+      run: |
+        curl \
+          -X POST \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/${{ github.repository }}/issues \
+          -d '{"title":"Test issue","body":"This is a test issue created using GITHUB_TOKEN"}'
