Update npm auth token to use GITHUB_TOKEN environment variable.

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,2 @@
-// .npmrc
-@m__mdy__m:registry=https://npm.pkg.github.com/m-mdy-m
-//npm.pkg.github.com/:_authToken=SHA256:jLXuqMmjh5fHRVdNFPB5iT/hvvnRYgfi5KH6L+5m6E4=
-
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+@m-mdy-m:registry=https://npm.pkg.github.com/m-mdy-m
