--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -8,10 +8,10 @@ on:
     branches:
       - main
 permissions:
-    contents : write
-    packages : read
-    pull-requests : write
-  
+    contents: write
+    packages: read
+    pull-requests: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,29 +20,27 @@ jobs:
         node-version: [14, 16, 18]
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run tests
-      run: npm test
+      - name: Run tests
+        run: npm test
 
-    - name: Print the GITHUB_TOKEN
-      run: echo ${{ secrets.GITHUB_TOKEN }}
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-    
-    - name: Use GITHUB_TOKEN to create a GitHub issue
-      run: |
-        curl \
-          -X POST \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}/issues \
-          -d '{"title":"Test issue","body":"This is a test issue created using GITHUB_TOKEN"}'
+      - name: Print the GITHUB_TOKEN
+        run: echo ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Use GITHUB_TOKEN to create a GitHub issue
+        run: |
+          curl \
+            -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues \
+            -d '{"title":"Test issue","body":"This is a test issue created using GITHUB_TOKEN"}'
