--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -37,7 +37,8 @@ jobs:
         run: npm --version && npm config list
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+      
 
       - name: Run tests
         run: npm test
