--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -30,12 +30,12 @@ jobs:
           registry-url: 'https://npm.pkg.github.com/'
           scope: '@m-mdy-m'
       - name: Print the GITHUB_TOKEN
-        run: echo ${{ secrets.GITHUB_TOKEN }}
+        run: echo ${{ secrets.NPM_AUTH_TOKEN }}
       - name: Use GITHUB_TOKEN to create a GitHub issue
         run: |
           curl \
             -X POST \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: Bearer ${{ secrets.NPM_AUTH_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/issues \
-            -d '{"title":"Test issue","body":"This is a test issue created using GITHUB_TOKEN"}'
+            -d '{"title":"Test issue","body":"This is a test issue created using NPM_AUTH_TOKEN"}'
