--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -7,21 +7,22 @@ on:
   pull_request:
     branches:
       - main
+
 permissions:
   contents: write
   packages: read
   pull-requests: write
 
-
 jobs:
-  test:
+  test-and-publish:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14, 16, 18]
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -29,13 +30,22 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://npm.pkg.github.com/'
           scope: '@m-mdy-m'
-      - name: Print the GITHUB_TOKEN
-        run: echo ${{ secrets.NPM_AUTH_TOKEN }}
-      - name: Use GITHUB_TOKEN to create a GitHub issue
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
+      - name: Publish to GitHub Package Registry
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: Create GitHub issue
         run: |
-          curl \
-            -X POST \
-            -H "Authorization: Bearer ${{ secrets.NPM_AUTH_TOKEN }}" \
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/issues \
-            -d '{"title":"Test issue","body":"This is a test issue created using NPM_AUTH_TOKEN"}'
+            -d '{"title":"Test issue","body":"This is a test issue created using GITHUB_TOKEN"}'
