--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -30,12 +30,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://npm.pkg.github.com/'
           scope: '@m-mdy-m'
-      - name: Publish to GitHub Package Registry
-        run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-
-      - name: Create GitHub issue
+      - name: Create GitHub issue on success
+        if: success()
         run: |
           curl -X POST \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
