--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -34,7 +34,7 @@ jobs:
         if: success()
         run: |
           curl -X POST \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: Bearer ${{ secrets.NPM_AUTH_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/issues \
             -d '{"title":"Test issue","body":"This is a test issue created using GITHUB_TOKEN"}'
