--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 //npm.pkg.github.com/:_authToken=${NPM_AUTH_TOKEN}
-@m-mdy-m:registry=https://npm.pkg.github.com/m-mdy-m
+@m-mdy-m:registry=https://npm.pkg.github.com
