--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vfyjs",
-  "version": "1.0.6",
+  "name": "@m-mdy-m/vfyjs",
+  "version": "1.0.0",
   "description": "\"VfyJS is a sophisticated JavaScript library crafted to fortify projects. Its lightweight design offers a comprehensive solution for seamless value validation, ensuring data integrity and empowering developers with an advanced platform to effortlessly address diverse validation tasks in their projects.\"",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "stop": " exit 0"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,6 @@
     }
   ],
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "@m-mdy-m:registry": "https://npm.pkg.github.com"
   }
 }
