--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -1,8 +1,17 @@
-name: Node.js Package
+name: VfyJS
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+permissions:
+  contents: write
+  packages: read
+  pull-requests: write
 
 jobs:
   build:
@@ -13,8 +22,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm stop
-
+      - run: npm test
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
@@ -27,7 +35,14 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
+          scope: '@m-mdy-m'
       - run: npm ci
       - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Create GitHub issue on success
+        if: success()
+        run: |
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues \
+            -d '{"title":"Test issue","body":"This is a test issue created using GITHUB_TOKEN"}'
