--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=${NPM_AUTH_TOKEN}
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
 @m-mdy-m:registry=https://npm.pkg.github.com/m-mdy-m
