--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
-@m-mdy-m:registry=https://npm.pkg.github.com/m-mdy-m
+//npm.pkg.github.com/:_authToken=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
+@m-mdy-m:registry=https://npm.pkg.github.com/
