--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
+    "email" : "jest email.test.js",
+    "password" : "jest password.test.js",
     "stop": " exit 0"
   },
   "repository": {
