Update GitHub Actions workflow and .npmrc for publishing to GitHub Packages

--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -1,3 +1,6 @@
+# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+
 name: Node.js Package
 
 on:
@@ -8,28 +11,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: npm ci
+      - run: npm test
 
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: read
+      packages: write
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
-
-      - name: Login to GitHub Packages Registry
-        run: npm login --registry=https://npm.pkg.github.com/ --scope=@m-mdy-m --always-auth
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
+      - run: npm publish
         env:
-          NODE_AUTH_TOKEN: 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
-
-      - name: Publish to GitHub Packages Registry
-        run: npm publish --access public
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
