--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm run build --if-present
+    - run: npm jest
     - run: npm test
   publish-gpr:
       needs: build
