--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm jest
+    - run: npm install jest
     - run: npm test
   publish-gpr:
       needs: build
