--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "homepage": "https://github.com/m-mdy-m/VfyJS#readme",
   "devDependencies": {
-    "jest": "^29.7.0",
-    "semantic-releasfige": "^23.0.0"
+    "jest": "^29.7.0"
   },
   "contributors": [
     {
