Update publish workflow to publish to npm.

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=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
-@m-mdy-m:registry=https://npm.pkg.github.com/
+@m-mdy-m:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authTOKEN=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
