--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -23,6 +23,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: http://registry/npmjs.org
 
+      - name: Install dependencies
+        run: | 
+         npm install 
+         npm ci
   publish:
     runs-on: ubuntu-latest
     needs: build
@@ -39,6 +43,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: http://registry/npmjs.org
+
+      - name: Install dependencies
+        run: | 
+         npm install 
+         npm ci
+
       - name: Publish To NPM
         run: npm publish --access public
         env:
