--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          registry-url: http://registry/npmjs.org
+
   publish:
     runs-on: ubuntu-latest
     needs: build
@@ -37,8 +37,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          registry-url: http://registry/npmjs.org
-      - name: Publish To NPM
+
+      - name: Set up .npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" > ~/.npmrc
+
+      - name: Publish To GitHub Package Registry
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
