--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -27,19 +27,25 @@ jobs:
     needs: build
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [14.x, 16.x, 18.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use NodeJS ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Set up .npmrc for GitHub Package Registry
-        run: echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" > ~/.npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=\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" > ~/.npmrc
+
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Fix package.json issues
+        run: npm pkg fix
 
       - name: Publish To GitHub Package Registry
         run: npm publish --access public
