--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -46,7 +46,8 @@ jobs:
 
       - name: Fix package.json issues
         run: npm pkg fix
-
+      - name: path vesion 
+        run : npm version patch
       - name: Publish To GitHub Package Registry
         run: npm publish --access public
         env:
