remove .env and update#11

--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -39,13 +39,19 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Set up .npmrc for GitHub Package Registry
-        run: echo "//npm.pkg.github.com/:_authToken=\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" > ~/.npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" > ~/.npmrc
 
       - name: Install npm dependencies
-        run: npm install
+        run: |
+          npm install -g npm
+          npm install
 
       - name: Fix package.json issues
         run: npm pkg fix
+
+      - name: Clean npm cache
+        run: npm cache clean -f
+
       - name: Publish To GitHub Package Registry
         run: npm publish --access public
         env:
