--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -53,6 +53,6 @@ jobs:
         run: npm cache clean -f
 
       - name: Publish To GitHub Package Registry
-        run: npm publish --access public
+        run: npm publish 
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
