--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@m-mdy-m:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+//npm.pkg.github.com/:_authToken=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
+registry=https://npm.pkg.github.com/m-mdy-m
