--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -38,8 +38,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Set up .npmrc for GitHub Package Registry
+        run: echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" > ~/.npmrc
+
+      - name: Install npm dependencies
+        run: npm install
+
       - name: Fix package.json issues
         run: npm pkg fix
+
       - name: Clean npm cache
         run: npm cache clean -f
 
