--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
 registry=https://npm.pkg.github.com/m-mdy-m
-//npm.pkg.github.com/:_authToken=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
