--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
-registry=https://npm.pkg.github.com/m-mdy-m
+@m-mdy-m:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${VFY}
