--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @m-mdy-m:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${VFY}
+//npm.pkg.github.com/:_authToken=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 
