adding token nmprc and change name package

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
-@m-mdy-m:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=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
+
+@m__mdy__m:registry=https://npm.pkg.github.com
