--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=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
 
-@m__mdy__m:registry=https://npm.pkg.github.com
+@medishn:registry=https://npm.pkg.github.com
