--- a/.github/workflows/Nodejs.yml
+++ b/.github/workflows/Nodejs.yml
@@ -23,5 +23,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: test 
         run: |
-          npm install 
+          npm i 
           npm test
