--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@m-mdy-m/vfyjs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "VfyJS is a sophisticated JavaScript library crafted to fortify projects. Its lightweight design offers a comprehensive solution for seamless value validation, ensuring data integrity and empowering developers with an advanced platform to effortlessly address diverse validation tasks in their projects.",
   "main": "index.js",
   "directories": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/m-mdy-m/VfyJS.git"
+    "url": "git+https://github.com/VfyJs/VfyJS.git"
   },
   "keywords": [
     "Verify",
