--- a/.github/workflows/Nodejs.yml
+++ b/.github/workflows/Nodejs.yml
@@ -26,4 +26,4 @@ jobs:
           npm i 
           npm test
       - name: Push  organization repository
-        run: git push -u organization main
+        run: git push --all
