--- a/.github/workflows/Nodejs.yml
+++ b/.github/workflows/Nodejs.yml
@@ -26,4 +26,6 @@ jobs:
           npm i 
           npm test
       - name: Push  organization repository
-        run: git push --all
+        run: |
+          git remote add organization https://github.com/VfyJs/VfyJS.git
+          git push -u organization HEAD:main
