--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^29.7.0"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://npm.pkg.github.com/"
   }
+  
 }
