--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @medishn:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=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
+//registry.npmjs.org/:_authToken=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
