--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
-//registry.npmjs.org/:_authToken=${NODE_AUTH}
-registry=https://registry.npmjs.org/
-always-auth=true
+@medishn:registry=https://registry.npmjs.org/
+save-exact=true
+legacy-peer-deps=true
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
