--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 @medishn:registry=https://registry.npmjs.org/
 save-exact=true
 legacy-peer-deps=true
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+//registry.npmjs.org/:_authToken=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
