Add maintainer to package.json

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "homepage": "https://github.com/VfyJs/VfyJS/blob/main/README.md",
   "dependencies": {
     "jest": "^29.7.0"
-  }
+  },
+  "maintainers": [
+    "medishn <mediishn@gmail.com>"
+  ]
 }
