--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+//npm.pkg.github.com/:_authToken=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
 @m-mdy-m:registry=https://npm.pkg.github.com
