--- a/.github/workflows/NodeJs.yml
+++ b/.github/workflows/NodeJs.yml
@@ -29,3 +29,4 @@ jobs:
           npm test
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH }}
+          GITHUB_TOKE : ${{secrets.GITHUB_TOKEN}}
