--- a/.github/workflows/NodeJs.yml
+++ b/.github/workflows/NodeJs.yml
@@ -24,6 +24,7 @@ jobs:
           registry-url: https://registry.npmjs.org
 
       - name: Run Tests
-        run: npm test
+        run: |
+         npm test
         env:
           GITHUB_TOKE : ${{secrets.GITHUB_TOKEN}}
