--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@m-mdy-m/vfyjs",
+  "name": "vfyjs",
   "version": "1.1.3",
   "description": "VfyJS is a sophisticated JavaScript library crafted to fortify projects. Its lightweight design offers a comprehensive solution for seamless value validation, ensuring data integrity and empowering developers with an advanced platform to effortlessly address diverse validation tasks in their projects.",
   "main": "index.js",
