--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.1.3",
   "description": "VfyJS is a sophisticated JavaScript library crafted to fortify projects. Its lightweight design offers a comprehensive solution for seamless value validation, ensuring data integrity and empowering developers with an advanced platform to effortlessly address diverse validation tasks in their projects.",
   "main": "index.js",
+  "browser": "vfyjs.browser.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,9 @@
     "medishn <mediishn@gmail.com>"
   ],
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "path-browserify": "^1.0.1",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
   }
 }
