--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "medishn <mediishn@gmail.com>"
   ],
   "devDependencies": {
+    "@babel/runtime": "^7.23.9",
     "jest": "^29.7.0",
     "path-browserify": "^1.0.1",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-merge-and-include-globally": "^2.3.4"
   }
 }
