--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "medishn <mediishn@gmail.com>"
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
     "@babel/runtime": "^7.23.9",
+    "babel-loader": "^9.1.3",
     "jest": "^29.7.0",
     "path-browserify": "^1.0.1",
     "terser-webpack-plugin": "^5.3.10",
