--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.6",
   "description": "VfyJS is a sophisticated JavaScript library crafted to fortify projects. Its lightweight design offers a comprehensive solution for seamless value validation, ensuring data integrity and empowering developers with an advanced platform to effortlessly address diverse validation tasks in their projects.",
   "main": "index.js",
-  "browser": "vfyjs.browser.js",
+  "browser": "./dist/vfyjs.bundle.js",
   "directories": {
     "test": "tests"
   },
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/runtime": "^7.23.9",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "jest": "^29.7.0",
     "path-browserify": "^1.0.1",
     "terser-webpack-plugin": "^5.3.10",
